<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
  <modelVersion>4.0.0</modelVersion>
    
  
  <!-- parent pom -->
    
  <groupId>de.schlemmersoft.bewerbung.test1</groupId>
    
  <artifactId>test1-group</artifactId>
    
  <packaging>pom</packaging>
    
  <version>1.0.0-SNAPSHOT</version>
    
  <!-- sub modules -->
    
  <modules>
        
    <module>ProbenAPI</module>
        
    <module>ProbenSQL</module>
        
    <module>ProbenVector</module>
        
    <module>ProbenTest</module>
      
  </modules>
    
  <url>https://github.com/example/test</url>
    
  <licenses>
        
    <license>
            
      <name>MIT</name>
            
      <url>https://spdx.org/licenses/MIT.html</url>
            
      <distribution>repo</distribution>
          
    </license>
      
  </licenses>
    
  <organization>
        
    <name>Tobias Schlemmer</name>
        
    <url>http://example.com/</url>
      
  </organization>
    
  <scm>
        
    <url>https://github.com/example/test</url>
        
    <connection>git@github.com:example/test.git</connection>
        
    <developerConnection>git@github.com:example/test.git</developerConnection>
      
  </scm>
    
  <issueManagement>
        
    <system>Issues</system>
        
    <url>https://github.com/example/test/issues</url>
      
  </issueManagement>
    
  <ciManagement>
        
    <system>Pipelines</system>
        
    <url>https://github.com/example/test/pipelines</url>
      
  </ciManagement>
    
  <contributors>
        
    <contributor>
            
      <name>Some Contributor</name>
            
      <email>some.contributor@example.com</email>
            
      <url>http://example.com/</url>
            
      <organization>Example Organization</organization>
            
      <organizationUrl>http://example.com/</organizationUrl>
            
      <roles>
                
        <role>scrum-master</role>
              
      </roles>
            
      <timezone>Europe/Amsterdam</timezone>
          
    </contributor>
        
    <contributor>
            
      <name>Another Contributor</name>
            
      <email>another.contributor@example.com</email>
            
      <url>http://example.com/</url>
            
      <organization>Example Organization</organization>
            
      <organizationUrl>http://example.com/</organizationUrl>
            
      <roles>
                
        <role>product-owner</role>
              
      </roles>
            
      <timezone>Europe/Amsterdam</timezone>
          
    </contributor>
      
  </contributors>
    
  <developers>
        
    <developer>
            
      <id>somedev</id>
            
      <email>some.developer@example.com</email>
            
      <name>Some Developer</name>
            
      <organization>Example Organization</organization>
            
      <organizationUrl>http://example.com/</organizationUrl>
            
      <roles>
                
        <role>architect</role>
                
        <role>developer</role>
              
      </roles>
            
      <timezone>Europe/Amsterdam</timezone>
          
    </developer>
        
    <developer>
            
      <id>otherdev</id>
            
      <email>other.developer@example.com</email>
            
      <name>Other Developer</name>
            
      <organization>Example Organization</organization>
            
      <organizationUrl>http://example.com/</organizationUrl>
            
      <roles>
                
        <role>architect</role>
                
        <role>developer</role>
              
      </roles>
            
      <timezone>Europe/Amsterdam</timezone>
          
    </developer>
      
  </developers>
    
  <properties>
        
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
    <!-- <main.class>de.schlemmersoft.bewerbung.test1.ProbenAPI.HelloWorld</main.class> -->
        
    <maven.compiler.source>12</maven.compiler.source>
        
    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
        
    <junit.jupiter.version>5.6.2</junit.jupiter.version>
        
    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        
    <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
        
    <!--  <maven.surefire.plugin.version>2.12.4</maven.surefire.plugin.version> -->
        
    <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
        
    <!-- <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version> -->
        
    <!-- <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version> -->
      
  </properties>
    
  <dependencies>
        
    <dependency>
            
      <groupId>org.junit.jupiter</groupId>
            
      <artifactId>junit-jupiter</artifactId>
            
      <version>${junit.jupiter.version}</version>
            
      <scope>test</scope>
          
    </dependency>
      
  </dependencies>
    
  <build>
        
    <plugins>
            
      <plugin>
        	
        <artifactId>maven-compiler-plugin</artifactId>
                
        <version>${maven.compiler.plugin.version}</version>
                
        <configuration>
                    
          <showWarnings>true</showWarnings>
                    
          <showDeprecation>true</showDeprecation>
                  
        </configuration>
              
      </plugin>
            
      <plugin>
                
        <artifactId>maven-surefire-plugin</artifactId>
                
        <version>${maven.surefire.plugin.version}</version>
        	
        <!--
	<dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.2.0</version>
          </dependency>
	  <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>${junit.jupiter.version}</version>
	  </dependency>
        </dependencies>
-->
        	
        <!-- <configuration>
             <useSystemClassLoader>false</useSystemClassLoader>
	     </configuration>
	-->
        	
        <!--
            <dependencies>

<dependency>

<groupId>org.junit.platform</groupId>

<artifactId>junit-platform-surefire-provider</artifactId>

<version>1.1.0</version>

</dependency>

<dependency>

<groupId>org.junit.jupiter</groupId>

<artifactId>junit-jupiter-engine</artifactId>

<version>5.1.0</version>

</dependency>

</dependencies>      
	-->
              
      </plugin>
            
      <plugin>
        	
        <groupId>org.jacoco</groupId>
        	
        <artifactId>jacoco-maven-plugin</artifactId>
        	
        <!--	<version>0.8.2</version> -->
        	
        <executions>
          	  
          <execution>
            	    
            <goals>
              	      
              <goal>prepare-agent</goal>
              	    
            </goals>
            	  
          </execution>
          	  
          <!-- attached to Maven test phase -->
          	  
          <execution>
            	    
            <id>report</id>
            	    
            <phase>test</phase>
            	    
            <goals>
              	      
              <goal>report</goal>
              	    
            </goals>
            	  
          </execution>
          	
        </executions>
              
      </plugin>
            
      <plugin>
                
        <artifactId>maven-javadoc-plugin</artifactId>
        	
        <configuration>
              	  
          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
             	
        </configuration>
              
	<executions>
	  <execution>
	    <id>attach-javadocs</id>
	    <goals>
	      <goal>jar</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>
              

      
      <plugin>
                
        <groupId>org.apache.maven.plugins</groupId>
                
        <artifactId>maven-jar-plugin</artifactId>
                
        <version>${maven.jar.plugin.version}</version>
                
        <configuration>
                    
          <archive>
                        
            <manifest>
                            
              <addClasspath>true</addClasspath>
                            
              <classpathPrefix>lib/</classpathPrefix>
                            
              <mainClass>${main.class}</mainClass>
                          
            </manifest>
                      
          </archive>
                  
        </configuration>
              
      </plugin>
          
    </plugins>
      
  </build>
  
</project>
